chore: production deployment config — externalize all env vars